[package]
name = "behat-lsp"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"

[dependencies]
anyhow = "1.0"
bumpalo = "3.19"
dashmap = "6.1"
mago-database = "1.9.0"
mago-syntax = "1.9.0"
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.38", features = ["full"] }
tower-lsp = "0.20"
walkdir = "2.5"
